--- a/prideflags.html
+++ b/prideflags.html
@@ -103,9 +103,10 @@
                             rel="noopener noreferrer">Wikipedia</a></td>
                 </tr>
                 <tr>
-                    <td>Non-binary
+                    <td>
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/75/Nonbinary_flag.svg/320px-Nonbinary_flag.svg.png"
                             alt="The Nonbinary Pride flag; from top to bottom: yellow, white, purple, black." />
+                        Non-binary
                     </td>
                     <td><img src="img/Nonbinary_4mm_bicone_earrings.jpg"
                             alt="4mm bicone earrings of the nonbinary pride flag." />
@@ -117,9 +118,10 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Genderqueer
+                    <td>
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Genderqueer_Pride_Flag.svg/330px-Genderqueer_Pride_Flag.svg.png"
                             alt="The genderqueer pride flag; from top to bottom: light green, white, light purple." />
+                        Genderqueer
                     </td>
                     <td><img src="img/Genderqueer_4mm_bicone_earrings.jpg"
                             alt="4mm bicone earrings of the genderqueer pride flag." />
@@ -131,18 +133,20 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Genderfluid
+                    <td>
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b8/Genderfluidity_Pride-Flag.svg/330px-Genderfluidity_Pride-Flag.svg.png"
                             alt="The genderfluid pride flag; from top to bottom: pink, white, purple, black, blue." />
+                        Genderfluid
                     </td>
                     <td>pink, white, purple, black, blue</td>
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Genderfluidity_Pride-Flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a></td>
                 </tr>
                 <tr>
-                    <td>Maverique
+                    <td>
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3d/Maverique_flag.svg/330px-Maverique_flag.svg.png"
                             alt="The Maverique pride flag; from top to bottom: yellow, white, orange." />
+                        Maverique
                     </td>
                     <td><img src="img/Maverique_4mm_bicone_earrings.jpg"
                             alt="4mm bicone earrings of the maverique pride flag." />
@@ -180,9 +184,10 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Lesbian
+                    <td>
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Lesbian_Pride_Flag_2019.svg/330px-Lesbian_Pride_Flag_2019.svg.png"
                             alt="The 5-stripe variation of the lesbian pride flag; from top to bottom: red, orange, white, pink, dark pink." />
+                        Lesbian
                     </td>
                     <td><img src="img/Lesbian5_4mm_bicone_earrings.jpg"
                             alt="4mm bicone earrings of the 5-stripe lesbian pride flag." />
@@ -194,18 +199,20 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Bisexual
+                    <td>
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Bisexual_Pride_Flag.svg/320px-Bisexual_Pride_Flag.svg.png"
                             alt="The bisexual pride flag; from top to bottom: dark pink, light purple, blue." />
+                        Bisexual
                     </td>
                     <td>dark pink, light purple, blue</td>
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Bisexual_Pride_Flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a></td>
                 </tr>
                 <tr>
-                    <td>Pansexual
+                    <td>
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a2/Pansexuality_Pride_Flag.svg/320px-Pansexuality_Pride_Flag.svg.png"
                             alt="The pansexual pride flag; from top to bottom: pink, yellow, blue." />
+                        Pansexual
                     </td>
                     <td><img src="img/Pansexual_4mm_bicone_earrings.jpg"
                             alt="4mm bicone earrings of the pansexual pride flag." />
@@ -217,18 +224,20 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Asexual
+                    <td>
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9e/Asexual_Pride_Flag.svg/330px-Asexual_Pride_Flag.svg.png"
                             alt="The asexual pride flag; from top to bottom: black, gray, white, purple." />
+                        Asexual
                     </td>
                     <td>black, gray, white, purple</td>
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Asexual_Pride_Flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a></td>
                 </tr>
                 <tr>
-                    <td>Aromantic
+                    <td>
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ad/Aromantic_Pride_Flag.svg/330px-Aromantic_Pride_Flag.svg.png"
                             alt="The aromantic pride flag; from top to bottom: green, light green, white, gray, black." />
+                        Aromantic
                     </td>
                     <td>green, light green, white, gray, black</td>
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Aromantic_Pride_Flag.svg" target="_blank"
