--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <div id="projects">
         <div class="project">
-            <p>Pyrrhic's Color Swatches is a visual design resource for persona use.</p>
+            <p>Pyrrhic's Color Swatches is a visual design resource for personal use.</p>
             <p>The information and images on this website are provided as-is and may contain errors.</p>
         </div>
         <div class="project">
