--- a/prideflags.html
+++ b/prideflags.html
@@ -225,6 +225,18 @@
                 </tr>
                 <tr>
                     <td>
+                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/a/a5/Ceterosexual2.png"
+                            alt="The ceterosexual pride flag; from top to bottom: yellow, green, white, black." />
+                        Ceterosexual (attraction to enbies)
+                    </td>
+                    <td>yellow, green, white, black</td>
+                    <td>Flag: <a href="https://lgbtqia.fandom.com/wiki/File:Ceterosexual2.png" target="_blank"
+                            rel="noopener noreferrer">LGBTQIA+ Wiki</a>
+                        
+                    </td>
+                </tr>
+                <tr>
+                    <td>
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9e/Asexual_Pride_Flag.svg/330px-Asexual_Pride_Flag.svg.png"
                             alt="The asexual pride flag; from top to bottom: black, gray, white, purple." />
                         Asexual
