--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h2>Pride Flags</h2>
             <p>The inclusion or omission of any flag or flag variant does not imply identification with any community or
                 sub-community.</p>
-            <p><a href="prideflags.html" target="_blank" rel="noopener noreferrer">Pride Swatches</a></p>
+            <p><a href="prideflags.html">Pride Swatches</a></p>
             <div class="clear"></div>
         </div>
         <div class="project">
