--- a/seasons.html
+++ b/seasons.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Pride Flags</title>
+    <title>Four Seasons | Pyrrhic's Color Swatches</title>
     <link rel="stylesheet" href="reset.css" type="text/css">
     <link rel="stylesheet" href="styles.css" type="text/css">
 </head>
 
 <body>
     <header>
-        <h1>Four Seasons Swatches</h1>
+        <h1>Four Seasons</h1>
         <nav>
             <ul>
                 <li>&nbsp;</li>
@@ -69,7 +69,7 @@
         <nav>
             <ul>
                 <li>&nbsp;</li>
-                <li>Last updated 05 April 2025.</li>
+                <li>Last updated 15 April 2025.</li>
             </ul>
         </nav>
     </footer>
