Added more jewelry pictures

--- a/prideflags.html
+++ b/prideflags.html
@@ -138,9 +138,13 @@
                             alt="The genderfluid pride flag; from top to bottom: pink, white, purple, black, blue." />
                         Genderfluid
                     </td>
-                    <td>pink, white, purple, black, blue</td>
+                    <td><img src="img/Genderfluid_4mm_bicone_earrings.JPEG"
+                            alt="4mm bicone earrings of the genderfluid pride flag." />pink, white, purple, black, blue
+                    </td>
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Genderfluidity_Pride-Flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a></td>
+                    <br />
+                    Jewlery: Pyrrhic Silva (Jake)
                 </tr>
                 <tr>
                     <td>
@@ -204,9 +208,14 @@
                             alt="The bisexual pride flag; from top to bottom: dark pink, light purple, blue." />
                         Bisexual
                     </td>
-                    <td>dark pink, light purple, blue</td>
+                    <td><img src="img/Bisexual_4mm_bicone_earrings.JPEG"
+                            alt="4mm bicone earrings of the bisexual pride flag." />
+                        dark pink, light purple, blue</td>
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Bisexual_Pride_Flag.svg" target="_blank"
-                            rel="noopener noreferrer">Wikipedia</a></td>
+                            rel="noopener noreferrer">Wikipedia</a>
+                        <br />
+                        Jewlery: Pyrrhic Silva (Jake)
+                    </td>
                 </tr>
                 <tr>
                     <td>
@@ -229,10 +238,12 @@
                             alt="The ceterosexual pride flag; from top to bottom: yellow, green, white, black." />
                         Ceterosexual (attraction to enbies)
                     </td>
-                    <td>yellow, green, white, black</td>
+                    <td><img src="img/Ceterosexual_4mm_bicone_earrings.JPEG"
+                            alt="4mm bicone earrings of the ceterosexual pride flag." />
+                        yellow, green, white, black</td>
                     <td>Flag: <a href="https://lgbtqia.fandom.com/wiki/File:Ceterosexual2.png" target="_blank"
                             rel="noopener noreferrer">LGBTQIA+ Wiki</a>
-                        
+
                     </td>
                 </tr>
                 <tr>
@@ -241,9 +252,12 @@
                             alt="The asexual pride flag; from top to bottom: black, gray, white, purple." />
                         Asexual
                     </td>
-                    <td>black, gray, white, purple</td>
+                    <td><img src="img/Asexual_4mm_bicone_earrings.JPEG"
+                            alt="4mm bicone earrings of the asexual pride flag." />black, gray, white, purple</td>
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Asexual_Pride_Flag.svg" target="_blank"
-                            rel="noopener noreferrer">Wikipedia</a></td>
+                            rel="noopener noreferrer">Wikipedia</a>
+                        Jewery: Pyrrhic Silva (Jake)
+                    </td>
                 </tr>
                 <tr>
                     <td>
@@ -251,9 +265,12 @@
                             alt="The aromantic pride flag; from top to bottom: green, light green, white, gray, black." />
                         Aromantic
                     </td>
-                    <td>green, light green, white, gray, black</td>
+                    <td><img src="img/Aromantic_4mm_bicone_earrings.JPEG"
+                        alt="4mm bicone earrings of the aromantic pride flag." />
+                        green, light green, white, gray, black</td>
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Aromantic_Pride_Flag.svg" target="_blank"
-                            rel="noopener noreferrer">Wikipedia</a></td>
+                            rel="noopener noreferrer">Wikipedia</a>
+                        Jewlery: Pyrrhic Silva (Jake)</td>
                 </tr>
                 <tr>
                     <td>
@@ -261,9 +278,13 @@
                             alt="The aroace (aromantic and asexual) pride flag; from top to bottom: orange, yellow, white, light blue, blue." />
                         Aroace (aromantic and asexual)
                     </td>
-                    <td>orange, yellow, white, light blue, blue</td>
+                    <td><img src="img/AroAce_4mm_bicone_earrings.JPEG"
+                            alt="4mm bicone earrings of the aroace pride flag." />
+                        orange, yellow, white, light blue, blue</td>
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Aroace_flag.svg" target="_blank"
-                            rel="noopener noreferrer">Wikipedia</a></td>
+                            rel="noopener noreferrer">Wikipedia</a>
+                        Jewlery: Pyrrhic Silva (Jake)
+                    </td>
                 </tr>
             </table>
         </div>
