--- a/prideflags.html
+++ b/prideflags.html
@@ -25,7 +25,7 @@
             <table>
                 <tr>
                     <th>Flag</th>
-                    <th>Sample Jewery</th>
+                    <th>Sample Jewelry</th>
                     <th>Source</th>
                 </tr>
                 <tr>
@@ -40,7 +40,7 @@
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Gay_flag_7.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
                         <br />
-                        Jewery: Pyrrhic Silva (Jake)
+                        Jewelry: Pyrrhic Silva (Jake)
                     </td>
                 </tr>
                 <tr>
@@ -73,7 +73,7 @@
             <table>
                 <tr>
                     <th>Flag</th>
-                    <th>Sample Jewery</th>
+                    <th>Sample Jewelry</th>
                     <th>Source</th>
                 </tr>
                 <tr>
@@ -89,7 +89,7 @@
                     <td>Flag: <a href="https://commons.wikimedia.org/wiki/File:Transgender_Pride_flag.svg"
                             target="_blank" rel="noopener noreferrer">Wikipedia</a>
                         <br />
-                        Jewery: Pyrrhic Silva (Jake)
+                        Jewelry: Pyrrhic Silva (Jake)
                     </td>
                 </tr>
                 <tr>
@@ -114,7 +114,7 @@
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Nonbinary_flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
                         <br />
-                        Jewery: Pyrrhic Silva (Jake)
+                        Jewelry: Pyrrhic Silva (Jake)
                     </td>
                 </tr>
                 <tr>
@@ -129,7 +129,7 @@
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Genderqueer_Pride_Flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
                         <br />
-                        Jewery: Pyrrhic Silva (Jake)
+                        Jewelry: Pyrrhic Silva (Jake)
                     </td>
                 </tr>
                 <tr>
@@ -158,7 +158,7 @@
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Maverique_flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
                         <br />
-                        Jewery: Pyrrhic Silva (Jake)
+                        Jewelry: Pyrrhic Silva (Jake)
                     </td>
                 </tr>
             </table>
@@ -169,7 +169,7 @@
             <table>
                 <tr>
                     <th>Flag</th>
-                    <th>Sample Jewery</th>
+                    <th>Sample Jewelry</th>
                     <th>Source</th>
                 </tr>
                 <tr>
@@ -184,7 +184,7 @@
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:5-striped_New_Gay_Male_Pride_Flag.svg"
                             target="_blank" rel="noopener noreferrer">Wikipedia</a>
                         <br />
-                        Jewery: Pyrrhic Silva (Jake)
+                        Jewelry: Pyrrhic Silva (Jake)
                     </td>
                 </tr>
                 <tr>
@@ -199,7 +199,7 @@
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Lesbian_Pride_Flag_2019.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
                         <br />
-                        Jewery: Pyrrhic Silva (Jake)
+                        Jewelry: Pyrrhic Silva (Jake)
                     </td>
                 </tr>
                 <tr>
@@ -229,7 +229,7 @@
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Pansexuality_Pride_Flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
                         <br />
-                        Jewery: Pyrrhic Silva (Jake)
+                        Jewelry: Pyrrhic Silva (Jake)
                     </td>
                 </tr>
                 <tr>
@@ -256,7 +256,7 @@
                             alt="4mm bicone earrings of the asexual pride flag." />black, gray, white, purple</td>
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Asexual_Pride_Flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
-                        Jewery: Pyrrhic Silva (Jake)
+                        Jewelry: Pyrrhic Silva (Jake)
                     </td>
                 </tr>
                 <tr>
