Added links to shop

--- a/prideflags.html
+++ b/prideflags.html
@@ -40,7 +40,8 @@
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Gay_flag_7.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
                         <br />
-                        Jewelry: Pyrrhic Silva (Jake)
+                        Jewelry: <a href="https://www.etsy.com/listing/1899328881/" target="_blank"
+                        rel="noopener noreferrer">Pyrrhic Silva Crafts</a></td>
                     </td>
                 </tr>
                 <tr>
@@ -89,7 +90,8 @@
                     <td>Flag: <a href="https://commons.wikimedia.org/wiki/File:Transgender_Pride_flag.svg"
                             target="_blank" rel="noopener noreferrer">Wikipedia</a>
                         <br />
-                        Jewelry: Pyrrhic Silva (Jake)
+                        Jewelry: <a href="https://www.etsy.com/listing/1885155086/" target="_blank"
+                            rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
                     </td>
                 </tr>
                 <tr>
@@ -98,9 +100,13 @@
                             alt="The intersex pride flag; a solid yellow flag with a purple circle in the center." />
                         Intersex
                     </td>
-                    <td>yellow, purple, yellow</td>
+                    <td><img src="img/Intersex_4mm_bicone_earrings.JPEG"
+                            alt="4mm bicone earrings of the intersex pride flag." />
+                        yellow, purple, yellow</td>
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Intersex_Pride_Flag.svg" target="_blank"
-                            rel="noopener noreferrer">Wikipedia</a></td>
+                            rel="noopener noreferrer">Wikipedia</a>
+                        Jewelry: <a href="https://www.etsy.com/listing/1899328881/" target="_blank"
+                            rel="noopener noreferrer">Pyrrhic Silva Crafts</a></td>
                 </tr>
                 <tr>
                     <td>
@@ -114,7 +120,8 @@
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Nonbinary_flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
                         <br />
-                        Jewelry: Pyrrhic Silva (Jake)
+                        Jewelry: <a href="https://www.etsy.com/listing/1885155086/" target="_blank"
+                            rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
                     </td>
                 </tr>
                 <tr>
@@ -129,7 +136,8 @@
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Genderqueer_Pride_Flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
                         <br />
-                        Jewelry: Pyrrhic Silva (Jake)
+                        Jewelry: <a href="https://www.etsy.com/listing/1885155086/" target="_blank"
+                            rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
                     </td>
                 </tr>
                 <tr>
@@ -144,7 +152,8 @@
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Genderfluidity_Pride-Flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a></td>
                     <br />
-                    Jewlery: Pyrrhic Silva (Jake)
+                    Jewlery: <a href="https://www.etsy.com/listing/1885155086/" target="_blank"
+                        rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
                 </tr>
                 <tr>
                     <td>
@@ -158,7 +167,8 @@
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Maverique_flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
                         <br />
-                        Jewelry: Pyrrhic Silva (Jake)
+                        Jewelry: <a href="https://www.etsy.com/listing/1885155086/" target="_blank"
+                            rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
                     </td>
                 </tr>
             </table>
@@ -184,7 +194,8 @@
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:5-striped_New_Gay_Male_Pride_Flag.svg"
                             target="_blank" rel="noopener noreferrer">Wikipedia</a>
                         <br />
-                        Jewelry: Pyrrhic Silva (Jake)
+                        Jewelry: <a href="https://www.etsy.com/listing/1899328881/" target="_blank"
+                        rel="noopener noreferrer">Pyrrhic Silva Crafts</a></td>
                     </td>
                 </tr>
                 <tr>
@@ -199,7 +210,8 @@
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Lesbian_Pride_Flag_2019.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
                         <br />
-                        Jewelry: Pyrrhic Silva (Jake)
+                        Jewelry: <a href="https://www.etsy.com/listing/1899328881/" target="_blank"
+                        rel="noopener noreferrer">Pyrrhic Silva Crafts</a></td>
                     </td>
                 </tr>
                 <tr>
@@ -214,7 +226,8 @@
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Bisexual_Pride_Flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
                         <br />
-                        Jewlery: Pyrrhic Silva (Jake)
+                        Jewlery: <a href="https://www.etsy.com/listing/1899328881/" target="_blank"
+                        rel="noopener noreferrer">Pyrrhic Silva Crafts</a></td>
                     </td>
                 </tr>
                 <tr>
@@ -229,7 +242,8 @@
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Pansexuality_Pride_Flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
                         <br />
-                        Jewelry: Pyrrhic Silva (Jake)
+                        Jewelry: <a href="https://www.etsy.com/listing/1899328881/" target="_blank"
+                        rel="noopener noreferrer">Pyrrhic Silva Crafts</a></td>
                     </td>
                 </tr>
                 <tr>
@@ -243,7 +257,8 @@
                         yellow, green, white, black</td>
                     <td>Flag: <a href="https://lgbtqia.fandom.com/wiki/File:Ceterosexual2.png" target="_blank"
                             rel="noopener noreferrer">LGBTQIA+ Wiki</a>
-
+                        Jewelry: <a href="https://www.etsy.com/listing/1885156512/lgbtq-aroace-pride-earrings-asexual"
+                            target="_blank" rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
                     </td>
                 </tr>
                 <tr>
@@ -256,7 +271,8 @@
                             alt="4mm bicone earrings of the asexual pride flag." />black, gray, white, purple</td>
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Asexual_Pride_Flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
-                        Jewelry: Pyrrhic Silva (Jake)
+                        Jewelry: <a href="https://www.etsy.com/listing/1885156512/lgbtq-aroace-pride-earrings-asexual"
+                            target="_blank" rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
                     </td>
                 </tr>
                 <tr>
@@ -266,11 +282,12 @@
                         Aromantic
                     </td>
                     <td><img src="img/Aromantic_4mm_bicone_earrings.JPEG"
-                        alt="4mm bicone earrings of the aromantic pride flag." />
+                            alt="4mm bicone earrings of the aromantic pride flag." />
                         green, light green, white, gray, black</td>
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Aromantic_Pride_Flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
-                        Jewlery: Pyrrhic Silva (Jake)</td>
+                        Jewlery: <a href="https://www.etsy.com/listing/1885156512/lgbtq-aroace-pride-earrings-asexual"
+                            target="_blank" rel="noopener noreferrer">Pyrrhic Silva Crafts</a></td>
                 </tr>
                 <tr>
                     <td>
@@ -283,7 +300,8 @@
                         orange, yellow, white, light blue, blue</td>
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Aroace_flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
-                        Jewlery: Pyrrhic Silva (Jake)
+                        Jewlery: <a href="https://www.etsy.com/listing/1885156512/lgbtq-aroace-pride-earrings-asexual"
+                            target="_blank" rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
                     </td>
                 </tr>
             </table>
