--- a/prideflags.html
+++ b/prideflags.html
@@ -40,8 +40,9 @@
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Gay_flag_7.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
                         <br />
-                        Jewelry: <a href="https://www.etsy.com/listing/1899328881/" target="_blank"
-                        rel="noopener noreferrer">Pyrrhic Silva Crafts</a></td>
+                        Jewelry: <a href="https://pyrrhicsilvacrafts.etsy.com/listing/1899328881/lgbtq-pride-earrings-rainbow-lesbian-gay" target="_blank"
+                            rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
+                    </td>
                     </td>
                 </tr>
                 <tr>
@@ -90,7 +91,7 @@
                     <td>Flag: <a href="https://commons.wikimedia.org/wiki/File:Transgender_Pride_flag.svg"
                             target="_blank" rel="noopener noreferrer">Wikipedia</a>
                         <br />
-                        Jewelry: <a href="https://www.etsy.com/listing/1885155086/" target="_blank"
+                        Jewelry: <a href="https://pyrrhicsilvacrafts.etsy.com/listing/1885155086/lgbtq-pride-earrings-transgender" target="_blank"
                             rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
                     </td>
                 </tr>
@@ -105,7 +106,7 @@
                         yellow, purple, yellow</td>
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Intersex_Pride_Flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
-                        Jewelry: <a href="https://www.etsy.com/listing/1899328881/" target="_blank"
+                        Jewelry: <a href="https://pyrrhicsilvacrafts.etsy.com/listing/1885155086/lgbtq-pride-earrings-transgender/" target="_blank"
                             rel="noopener noreferrer">Pyrrhic Silva Crafts</a></td>
                 </tr>
                 <tr>
@@ -120,7 +121,7 @@
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Nonbinary_flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
                         <br />
-                        Jewelry: <a href="https://www.etsy.com/listing/1885155086/" target="_blank"
+                        Jewelry: <a href="https://pyrrhicsilvacrafts.etsy.com/listing/1885155086/lgbtq-pride-earrings-transgender" target="_blank"
                             rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
                     </td>
                 </tr>
@@ -136,7 +137,7 @@
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Genderqueer_Pride_Flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
                         <br />
-                        Jewelry: <a href="https://www.etsy.com/listing/1885155086/" target="_blank"
+                        Jewelry: <a href="https://pyrrhicsilvacrafts.etsy.com/listing/1885155086/lgbtq-pride-earrings-transgender" target="_blank"
                             rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
                     </td>
                 </tr>
@@ -152,7 +153,7 @@
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Genderfluidity_Pride-Flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a></td>
                     <br />
-                    Jewlery: <a href="https://www.etsy.com/listing/1885155086/" target="_blank"
+                    Jewlery: <a href="https://pyrrhicsilvacrafts.etsy.com/listing/1885155086/lgbtq-pride-earrings-transgender" target="_blank"
                         rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
                 </tr>
                 <tr>
@@ -167,8 +168,9 @@
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Maverique_flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
                         <br />
-                        Jewelry: <a href="https://www.etsy.com/listing/1885155086/" target="_blank"
-                            rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
+                        Jewelry: <a
+                            href="https://pyrrhicsilvacrafts.etsy.com/listing/1885156512/lgbtq-pride-earrings-aroace-asexual"
+                            target="_blank" rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
                     </td>
                 </tr>
             </table>
@@ -194,8 +196,9 @@
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:5-striped_New_Gay_Male_Pride_Flag.svg"
                             target="_blank" rel="noopener noreferrer">Wikipedia</a>
                         <br />
-                        Jewelry: <a href="https://www.etsy.com/listing/1899328881/" target="_blank"
-                        rel="noopener noreferrer">Pyrrhic Silva Crafts</a></td>
+                        Jewelry: <a href="https://pyrrhicsilvacrafts.etsy.com/listing/1899328881/lgbtq-pride-earrings-rainbow-lesbian-gay" target="_blank"
+                            rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
+                    </td>
                     </td>
                 </tr>
                 <tr>
@@ -210,8 +213,9 @@
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Lesbian_Pride_Flag_2019.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
                         <br />
-                        Jewelry: <a href="https://www.etsy.com/listing/1899328881/" target="_blank"
-                        rel="noopener noreferrer">Pyrrhic Silva Crafts</a></td>
+                        Jewelry: <a href="https://pyrrhicsilvacrafts.etsy.com/listing/1899328881/lgbtq-pride-earrings-rainbow-lesbian-gay" target="_blank"
+                            rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
+                    </td>
                     </td>
                 </tr>
                 <tr>
@@ -226,8 +230,9 @@
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Bisexual_Pride_Flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
                         <br />
-                        Jewlery: <a href="https://www.etsy.com/listing/1899328881/" target="_blank"
-                        rel="noopener noreferrer">Pyrrhic Silva Crafts</a></td>
+                        Jewlery: <a href="https://pyrrhicsilvacrafts.etsy.com/listing/1899328881/lgbtq-pride-earrings-rainbow-lesbian-gay" target="_blank"
+                            rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
+                    </td>
                     </td>
                 </tr>
                 <tr>
@@ -242,8 +247,9 @@
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Pansexuality_Pride_Flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
                         <br />
-                        Jewelry: <a href="https://www.etsy.com/listing/1899328881/" target="_blank"
-                        rel="noopener noreferrer">Pyrrhic Silva Crafts</a></td>
+                        Jewelry: <a href="https://pyrrhicsilvacrafts.etsy.com/listing/1899328881/lgbtq-pride-earrings-rainbow-lesbian-gay" target="_blank"
+                            rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
+                    </td>
                     </td>
                 </tr>
                 <tr>
@@ -257,7 +263,7 @@
                         yellow, green, white, black</td>
                     <td>Flag: <a href="https://lgbtqia.fandom.com/wiki/File:Ceterosexual2.png" target="_blank"
                             rel="noopener noreferrer">LGBTQIA+ Wiki</a>
-                        Jewelry: <a href="https://www.etsy.com/listing/1885156512/lgbtq-aroace-pride-earrings-asexual"
+                        Jewelry: <a href="https://pyrrhicsilvacrafts.etsy.com/listing/1885156512/lgbtq-pride-earrings-aroace-asexual"
                             target="_blank" rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
                     </td>
                 </tr>
@@ -271,7 +277,7 @@
                             alt="4mm bicone earrings of the asexual pride flag." />black, gray, white, purple</td>
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Asexual_Pride_Flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
-                        Jewelry: <a href="https://www.etsy.com/listing/1885156512/lgbtq-aroace-pride-earrings-asexual"
+                        Jewelry: <a href="https://pyrrhicsilvacrafts.etsy.com/listing/1885156512/lgbtq-pride-earrings-aroace-asexual"
                             target="_blank" rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
                     </td>
                 </tr>
@@ -286,7 +292,7 @@
                         green, light green, white, gray, black</td>
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Aromantic_Pride_Flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
-                        Jewlery: <a href="https://www.etsy.com/listing/1885156512/lgbtq-aroace-pride-earrings-asexual"
+                        Jewlery: <a href="https://pyrrhicsilvacrafts.etsy.com/listing/1885156512/lgbtq-pride-earrings-aroace-asexual"
                             target="_blank" rel="noopener noreferrer">Pyrrhic Silva Crafts</a></td>
                 </tr>
                 <tr>
@@ -300,7 +306,7 @@
                         orange, yellow, white, light blue, blue</td>
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Aroace_flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
-                        Jewlery: <a href="https://www.etsy.com/listing/1885156512/lgbtq-aroace-pride-earrings-asexual"
+                        Jewlery: <a href="https://pyrrhicsilvacrafts.etsy.com/listing/1885156512/lgbtq-pride-earrings-aroace-asexual"
                             target="_blank" rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
                     </td>
                 </tr>
@@ -311,7 +317,7 @@
         <nav>
             <ul>
                 <li>&nbsp;</li>
-                <li>Last updated 21 April 2025.</li>
+                <li>Last updated 23 April 2025.</li>
             </ul>
         </nav>
     </footer>
